# tehpajler

./: .gitignore  CMakeLists.txt  build_and_run.sh  clean_project.sh  cpu.md  generate_cpp_classes.sh
grammar/: TEHLexer.g4  TEHParser.g4
guiView/: TEHParser.g4  run_gui.txt
src/: CodeGenVisitor.cpp  CodeGenVisitor.h  Instruction.cpp  Instruction.h  SemanticVisitor.cpp  SemanticVisitor.h  cpu.cpp  cpu.h  main.cpp
tests/: test1.teh  test2.teh  test3.teh
